# PresentMonSDK

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
IntelPresentMon/CommonUtilities/: Hash.cpp  Hash.h  IntervalWaiter.h  PrecisionWaiter.h  Qpc.h
IntelPresentMon/CommonUtilities/rng/: PairToRange.h
IntelPresentMon/CommonUtilities/str/: String.cpp  String.h
IntelPresentMon/CommonUtilities/third/: reflect.hpp
IntelPresentMon/CommonUtilities/win/: WinAPI.h
IntelPresentMon/ControlLib/: Adl2Wrapper.cpp  Adl2Wrapper.h  AmdPowerTelemetryAdapter.cpp  AmdPowerTelemetryAdapter.h  AmdPowerTelemetryProvider.cpp  AmdPowerTelemetryProvider.h  CpuTelemetry.cpp  CpuTelemetry.h  CpuTelemetryInfo.h  DllModule.h  IntelPowerTelemetryAdapter.cpp  IntelPowerTelemetryAdapter.h  IntelPowerTelemetryProvider.cpp  IntelPowerTelemetryProvider.h  Logging.h  MacroHelpers.h  NvapiWrapper.cpp  NvapiWrapper.h  NvidiaPowerTelemetryAdapter.cpp  NvidiaPowerTelemetryAdapter.h  NvidiaPowerTelemetryProvider.cpp  NvidiaPowerTelemetryProvider.h  NvmlWrapper.cpp  NvmlWrapper.h  PowerTelemetryAdapter.h  PowerTelemetryProvider.h  PowerTelemetryProviderFactory.cpp  PowerTelemetryProviderFactory.h  PresentMonPowerTelemetry.h  SignatureComparison.cpp  SignatureComparison.h  TelemetryHistory.h  Ver.h  WmiCpu.cpp  WmiCpu.h  cApiWrapper.cpp  ctlpvttempWrapper.cpp  ctlpvttemp_api.h  igcl_api.h  ipf_sdk_version.h  (+3 more)
IntelPresentMon/PresentMonAPI2/: PresentMonAPI.h
IntelPresentMon/PresentMonMiddleware/: ConcreteMiddleware.cpp  FrameEventQuery.cpp
IntelPresentMon/PresentMonService/: ActionServer.cpp  ActionServer.h  LateStageReprojectionData.hpp  MockPresentMonSession.cpp  MockPresentMonSession.h  PMMainThread.cpp  PMMainThread.h  PowerTelemetryContainer.h  PresentMon.cpp  PresentMon.h  PresentMonSession.cpp  PresentMonSession.h  RealtimePresentMonSession.cpp  RealtimePresentMonSession.h  Service.cpp  Service.h  ServiceMain.cpp
IntelPresentMon/PresentMonUtils/: StreamFormat.h
IntelPresentMon/Streamer/: NamedSharedMemory.cpp  NamedSharedMemory.h  StreamClient.cpp  StreamClient.h  Streamer.cpp  Streamer.h
PresentData/: Debug.cpp  Debug.hpp  GpuTrace.cpp  GpuTrace.hpp  PresentMonTraceConsumer.cpp  PresentMonTraceConsumer.hpp  PresentMonTraceSession.cpp  PresentMonTraceSession.hpp  TraceConsumer.cpp  TraceConsumer.hpp
PresentData/ETW/: Intel_PresentMon.h  Microsoft_Windows_D3D9.h  Microsoft_Windows_DXGI.h  Microsoft_Windows_Dwm_Core.h  Microsoft_Windows_Dwm_Core_Win7.h  Microsoft_Windows_DxgKrnl.h  Microsoft_Windows_DxgKrnl_Win7.h  Microsoft_Windows_EventMetadata.h  Microsoft_Windows_Kernel_Process.h  Microsoft_Windows_Win32k.h  NT_Process.h
PresentMon/: CommandLine.cpp  Console.cpp  ConsumerThread.cpp  CsvOutput.cpp  MainThread.cpp  OutputThread.cpp  PresentMon.hpp  Privilege.cpp
(+10 files in other folders)
